add more content

--- a/gallery.html
+++ b/gallery.html
@@ -67,47 +67,46 @@
 					<!-- EDIT: name -->
 					<h1>Wellcome to my space</h1>
 					<!-- EDIT: title | email -->
-					<h3> Zirui Zhang<br /> <a href="mailto:ziruiwww@foxmail.com@EMAIL.com" target="_blank">ziruiwww@foxmail.com</a></h3>
+					<h3> Zirui Zhang<br /> <a href="mailto:zzirui@campus.haifa.ac.il@EMAIL.com" target="_blank">zzirui@campus.haifa.ac.il</a></h3>
 				</div><!--/.col-lg-12 -->
 			</div><!--/.row -->
 		</div><!--/.container -->
 	</div><!--/.header -->
 	
 
-<div class="image-container">
-    <img src="/images/fellowship2.png" alt="Image 1">
-    <p>Image 1 Second year master fellowship and excellence scholarship</p>
-</div>
-<div class="image-container">
-    <img src="/images/fellowship1.png" alt="Image 2">
-    <p>Image 2 First year master fellowship and excellence scholarship</p>
-</div>
-<div class="image-container">
-    <img src="/images/friendship.png" alt="Image 3">
-    <p>Image 3 Israel China Friendship Society Excellent Student Scholarship</p>
-</div>
-<div class="image-container">
-    <img src="/images/poster.png" alt="Image 4">
-    <p>Image 4 Conference Poster</p>
-</div>
-<div class="image-container">
-    <img src="/images/scholarship.png" alt="Image 5">
-    <p>Image 5 Four years scholarship during undergraduate</p>
-</div>
-<div class="image-container">
-    <img src="/images/M.png" alt="Image 6">
-    <p>Image 6 Meritorious Winner of America Mathematical Contest In Modeling</p>
-</div>
-
-<div class="image-container">
-    <img src="/images/second.png" alt="Image 7">
-    <p>Image 7 Second prize of China National Structural Design Information
-Technology Competition for College Students in 2021</p>
-</div>
-
-<div class="image-container">
-    <img src="/images/other awards.png" alt="Image 8">
-    <p>Image 8 Other awards</p>
+<div style="display: flex; flex-wrap: wrap; justify-content: space-around;">
+    <div style="width: 200px; text-align: center; margin: 10px;">
+        <img src="/images/fellowship2.png" alt="Image 1" style="width: 100%; height: 200px; object-fit: cover;">
+        <p>Image 1 Second year master fellowship and excellence scholarship</p>
+    </div>
+    <div style="width: 200px; text-align: center; margin: 10px;">
+        <img src="/images/fellowship1.png" alt="Image 2" style="width: 100%; height: 200px; object-fit: cover;">
+        <p>Image 2 First year master fellowship and excellence scholarship</p>
+    </div>
+    <div style="width: 200px; text-align: center; margin: 10px;">
+        <img src="/images/friendship.png" alt="Image 3" style="width: 100%; height: 200px; object-fit: cover;">
+        <p>Image 3 Israel China Friendship Society Excellent Student Scholarship</p>
+    </div>
+    <div style="width: 200px; text-align: center; margin: 10px;">
+        <img src="/images/poster.png" alt="Image 4" style="width: 100%; height: 200px; object-fit: cover;">
+        <p>Image 4 Conference Poster</p>
+    </div>
+    <div style="width: 200px; text-align: center; margin: 10px;">
+        <img src="/images/scholarship.png" alt="Image 5" style="width: 100%; height: 200px; object-fit: cover;">
+        <p>Image 5 Four years scholarship during undergraduate</p>
+    </div>
+    <div style="width: 200px; text-align: center; margin: 10px;">
+        <img src="/images/M.png" alt="Image 6" style="width: 100%; height: 200px; object-fit: cover;">
+        <p>Image 6 Meritorious Winner of America Mathematical Contest In Modeling</p>
+    </div>
+    <div style="width: 200px; text-align: center; margin: 10px;">
+        <img src="/images/second.png" alt="Image 7" style="width: 100%; height: 200px; object-fit: cover;">
+        <p>Image 7 Second prize of China National Structural Design Information Technology Competition for College Students in 2021</p>
+    </div>
+    <div style="width: 200px; text-align: center; margin: 10px;">
+        <img src="/images/other awards.png" alt="Image 8" style="width: 100%; height: 200px; object-fit: cover;">
+        <p>Image 8 Other awards</p>
+    </div>
 </div>
 
 
@@ -126,8 +125,8 @@ Technology Competition for College Students in 2021</p>
 				<!-- EDIT: email -->
 				<div class="col-lg-6">
 					<p><t>Email</t><br/>
+						<a href="mailto:zzirui@campus.haifa.ac.il" class="mail">zzirui@campus.haifa.ac.il</a> <br/>
 						<a href="mailto:ziruiwww@foxmail.com" class="mail">ziruiwww@foxmail.com</a> <br/>
-						<a href="mailto:zzruiwww@gmail.com" class="mail">zzruiwww@gmail.com</a> <br/>
 					</p>
 					<!-- EDIT: address -->
 					<p style="color: white;"><t>Address</t><br/>
@@ -158,6 +157,11 @@ Technology Competition for College Students in 2021</p>
 	</div><!--/ #footer -->
 
 
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</body>
 
   </body>
 </html>
