--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
+
     <!-- Link the main.css stylesheet -->
     <link href="css/main.css" rel="stylesheet">
     
@@ -67,7 +68,7 @@
 					<!-- EDIT: name -->
 					<h1>Wellcome to my space</h1>
 					<!-- EDIT: title | email -->
-					<h3> Zirui Zhang<br /> <a href="mailto:ziruiwww@foxmail.com@EMAIL.com" target="_blank">ziruiwww@foxmail.com</a></h3>
+					<h3> Zirui Zhang<br /> <a href="mailto:zzirui@campus.haifa.ac.il@EMAIL.com" target="_blank">zzirui@campus.haifa.ac.il</a></h3>
 				</div><!--/.col-lg-12 -->
 			</div><!--/.row -->
 		</div><!--/.container -->
@@ -86,9 +87,13 @@
 					<!-- EDIT: about -->
 					<p>I am a Master student currently at Haifa University. My research interests focus on Mechanism of Rock, and Numerical Simulation Method. </p>
 				</div>
-				<div class="col-lg-3">
+				    <div class="image-container">
+				        <img src="/images/me.jpg" alt="Original Image" class="hover-effect original-image">
+				        <img src="/images/me2.png" alt="Hover Image" class="hover-effect hover-image">
+				    </div>
+
 					<!-- EDIT: download link -->
-					<p><a href="my-resume.pdf" target="_blank"><i class="icon-file"></i> <sm>DOWNLOAD PDF</sm></a></p>
+					<p><a href="/file/CV" target="_blank"><i class="icon-file"></i> <sm>DOWNLOAD CV PDF</sm></a></p>
 				</div>
 				
 			</div><!--/.row -->
@@ -151,11 +156,11 @@ precipitation pattern: insights from the pore scale modelling
 				<!-- EDIT: work line 1 -->
 			<div class="col-lg-6"style="max-width: 5000px">
 				<p class="tight"><t>Part-time &nbsp; Research Asistant, &nbsp;2018-2021</t><br/>
-					<p class="triangle-list">Propose a Device and Method of Visualization Fracture seepage Simulation using Magnetic fluid;</p>
+					<p class="triangle-list">Propose a Device and Method of Visualization Fracture seepage Simulation using Magnetic fluid</p>
 					<p class="triangle-list">Proposed An experimental device and method for Measuring the Opening of a certain point of rock
-fissure and calibrating the permeability Pressure value using magnetic fluid;</p>
-					<p class="triangle-list">Participated in the design and implementation of magnetic fluid seepage test on rock fissure;</p>
-					<p class="triangle-list">Assisted professor in monograph editing.</p>
+fissure and calibrating the permeability Pressure value using magnetic fluid</p>
+					<p class="triangle-list">Participated in the design and implementation of magnetic fluid seepage test on rock fissure</p>
+					<p class="triangle-list">Assisted professor in monograph editing</p>
 				</p>
 			</div><!--/.row -->
 		<br>
@@ -252,8 +257,8 @@ Mathematical Modeling Hubei Contest in 2019</strong>
 				<!-- EDIT: email -->
 				<div class="col-lg-6">
 					<p><t>Email</t><br/>
+						<a href="mailto:zzirui@campus.haifa.ac.il" class="mail">zzirui@campus.haifa.ac.il</a> <br/>
 						<a href="mailto:ziruiwww@foxmail.com" class="mail">ziruiwww@foxmail.com</a> <br/>
-						<a href="mailto:zzruiwww@gmail.com" class="mail">zzruiwww@gmail.com</a> <br/>
 					</p>
 					<!-- EDIT: address -->
 					<p style="color: white;"><t>Address</t><br/>
@@ -283,6 +288,11 @@ Mathematical Modeling Hubei Contest in 2019</strong>
 		</div><!--/.container -->
 	</div><!--/ #footer -->
 
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</body>
 
 
   </body>
