--- a/publication.html
+++ b/publication.html
@@ -67,7 +67,7 @@
 					<!-- EDIT: name -->
 					<h1>Wellcome to my space</h1>
 					<!-- EDIT: title | email -->
-					<h3> Zirui Zhang<br /> <a href="mailto:ziruiwww@foxmail.com@EMAIL.com" target="_blank">ziruiwww@foxmail.com</a></h3>
+					<h3> Zirui Zhang<br /> <a href="mailto:zzirui@campus.haifa.ac.il@EMAIL.com" target="_blank">zzirui@campus.haifa.ac.il</a></h3>
 				</div><!--/.col-lg-12 -->
 			</div><!--/.row -->
 		</div><!--/.container -->
@@ -88,7 +88,7 @@
 				</div>
 				<div class="col-lg-3">
 					<!-- EDIT: download link -->
-					<p><a href="my-resume.pdf" target="_blank"><i class="icon-file"></i> <sm>DOWNLOAD PDF</sm></a></p>
+					<p><a href="/file/CV.pdf" target="_blank"><i class="icon-file"></i> <sm>DOWNLOAD PDF</sm></a></p>
 				</div>
 				
 			</div><!--/.row -->
@@ -146,8 +146,9 @@
 				<!-- EDIT: email -->
 				<div class="col-lg-6">
 					<p><t>Email</t><br/>
+						<a href="mailto:zzirui@campus.haifa.ac.il" class="mail">zzirui@campus.haifa.ac.il</a> <br/>
 						<a href="mailto:ziruiwww@foxmail.com" class="mail">ziruiwww@foxmail.com</a> <br/>
-						<a href="mailto:zzruiwww@gmail.com" class="mail">zzruiwww@gmail.com</a> <br/>
+						
 					</p>
 					<!-- EDIT: address -->
 					<p style="color: white;"><t>Address</t><br/>
@@ -178,6 +179,11 @@
 	</div><!--/ #footer -->
 
 
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</body>
 
   </body>
 </html>
