--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
 					<!-- EDIT: about -->
 					<p>I am a Master student currently at Haifa University. My research interests focus on Mechanism of Rock, and Numerical Simulation Method. </p>
 				</div>
-				    <div class="image-container">
+				    <div class="image-container" style="position: relative; width: 100%; max-width: 300px;">
 				        <img src="/images/me.jpg" alt="Original Image" class="hover-effect original-image">
 				        <img src="/images/me2.png" alt="Hover Image" class="hover-effect hover-image">
 				    </div>
 
 					<!-- EDIT: download link -->
-					<p><a href="/file/CV" target="_blank"><i class="icon-file"></i> <sm>DOWNLOAD CV PDF</sm></a></p>
+					<p><a href="/file/CV.pdf" target="_blank"><i class="icon-file"></i> <sm>DOWNLOAD CV PDF</sm></a></p>
 				</div>
 				
 			</div><!--/.row -->
