debug gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -75,37 +75,37 @@
 	
 
 <div style="display: flex; flex-wrap: wrap; justify-content: space-around;">
-    <div style="width: 200px; text-align: center; margin: 10px;">
+    <div style="width: 48%; text-align: center; margin: 1%;">
         <img src="/images/fellowship2.png" alt="Image 1" style="width: 100%; height: 200px; object-fit: cover;">
-        <p>Image 1 Second year master fellowship and excellence scholarship</p>
+        <p style="color: #007BFF;">Image 1 Second year master fellowship and excellence scholarship</p>
     </div>
     <div style="width: 200px; text-align: center; margin: 10px;">
         <img src="/images/fellowship1.png" alt="Image 2" style="width: 100%; height: 200px; object-fit: cover;">
-        <p>Image 2 First year master fellowship and excellence scholarship</p>
+        <p style="color: #007BFF;">Image 2 First year master fellowship and excellence scholarship</p>
     </div>
     <div style="width: 200px; text-align: center; margin: 10px;">
         <img src="/images/friendship.png" alt="Image 3" style="width: 100%; height: 200px; object-fit: cover;">
-        <p>Image 3 Israel China Friendship Society Excellent Student Scholarship</p>
+        <p style="color: #007BFF;">Image 3 Israel China Friendship Society Excellent Student Scholarship</p>
     </div>
     <div style="width: 200px; text-align: center; margin: 10px;">
         <img src="/images/poster.png" alt="Image 4" style="width: 100%; height: 200px; object-fit: cover;">
-        <p>Image 4 Conference Poster</p>
+        <p style="color: #007BFF;">Image 4 Conference Poster</p>
     </div>
     <div style="width: 200px; text-align: center; margin: 10px;">
         <img src="/images/scholarship.png" alt="Image 5" style="width: 100%; height: 200px; object-fit: cover;">
-        <p>Image 5 Four years scholarship during undergraduate</p>
+        <p style="color: #007BFF;">Image 5 Four years scholarship during undergraduate</p>
     </div>
     <div style="width: 200px; text-align: center; margin: 10px;">
         <img src="/images/M.png" alt="Image 6" style="width: 100%; height: 200px; object-fit: cover;">
-        <p>Image 6 Meritorious Winner of America Mathematical Contest In Modeling</p>
+        <p style="color: #007BFF;">Image 6 Meritorious Winner of America Mathematical Contest In Modeling</p>
     </div>
     <div style="width: 200px; text-align: center; margin: 10px;">
         <img src="/images/second.png" alt="Image 7" style="width: 100%; height: 200px; object-fit: cover;">
-        <p>Image 7 Second prize of China National Structural Design Information Technology Competition for College Students in 2021</p>
+        <p style="color: #007BFF;">Image 7 Second prize of China National Structural Design Information Technology Competition for College Students in 2021</p>
     </div>
     <div style="width: 200px; text-align: center; margin: 10px;">
         <img src="/images/other awards.png" alt="Image 8" style="width: 100%; height: 200px; object-fit: cover;">
-        <p>Image 8 Other awards</p>
+        <p style="color: #007BFF;">Image 8 Other awards</p>
     </div>
 </div>
 
