--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<!-- EDIT: about -->
 					<p>I am a Master student currently at Haifa University. My research interests focus on Mechanism of Rock, and Numerical Simulation Method. </p>
 				</div>
-				    <div class="image-container" style="position: relative; width: 100%; max-width: 300px;">
+				    <div class="image-container" style="position: relative; width: 300px; height: 500px;">
 				        <img src="/images/me.jpg" alt="Original Image" class="hover-effect original-image">
 				        <img src="/images/me2.png" alt="Hover Image" class="hover-effect hover-image">
 				    </div>
