--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 					<p>I am a Master student currently at Haifa University. My research interests focus on Mechanism of Rock, and Numerical Simulation Method. </p>
 				</div>
 				    <div class="image-container" style="position: relative; width: 300px; height: 500px;">
-				        <img src="/images/me.jpg" alt="Original Image" class="hover-effect original-image">
-				        <img src="/images/me2.png" alt="Hover Image" class="hover-effect hover-image">
+				        <img src="/images/me.jpg" alt="Original Image" class="hover-effect original-image" style="width: 300px; height: 500px; object-fit: cover; position: absolute; top: 0; left: 0;">
+				        <img src="/images/me2.png" alt="Hover Image" class="hover-effect hover-image" style="width: 300px; height: 500px; object-fit: cover; position: absolute; top: 0; left: 0;">
 				    </div>
 
 					<!-- EDIT: download link -->
