--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@ Mathematical Modeling Hubei Contest in 2019</strong>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="js/custom.js"></script>
 </body>
 
 
