--- a/gallery.html
+++ b/gallery.html
@@ -76,38 +76,37 @@
 
 <div style="display: flex; flex-wrap: wrap; justify-content: space-around;">
 	<div style="text-align: center; margin: 10px;">
-        <img src="/images/fellowship2.png" alt="Image 1" style="width: 300px; height: 200px; object-fit: cover;">
+        <img src="/images/fellowship2.png" alt="Image 1" style="width: 300px; height: 200px; object-fit:object-fit: contain; display: block; margin: auto;">
         <p style="color: #000000;">Image 1 Second year master fellowship and excellence scholarship</p>
     </div>
     <div style="width: 500px; text-align: center; margin: 10px;">
-        <img src="/images/fellowship1.png" alt="Image 2" style="width: 300px; height: 200px; object-fit: cover;">
+        <img src="/images/fellowship1.png" alt="Image 2" style="width: 300px; height: 200px; object-fit: contain; display: block; margin: auto;;">
         <p style="color: #000000;">Image 2 First year master fellowship and excellence scholarship</p>
     </div>
     <div style="width: 500px; text-align: center; margin: 10px;">
-        <img src="/images/friendship.png" alt="Image 3" style="width: 300px; height: 200px; object-fit: cover;">
+        <img src="/images/friendship.png" alt="Image 3" style="width: 300px; height: 200px; object-fit: contain; display: block; margin: auto;;">
         <p style="color: #000000;">Image 3 Israel China Friendship Society Excellent Student Scholarship</p>
     </div>
     <div style="width: 500px; text-align: center; margin: 10px;">
-        <img src="/images/poster.png" alt="Image 4" style="width: 300px; height: 200px; object-fit: cover;">
+        <img src="/images/poster.png" alt="Image 4" style="width: 300px; height: 200px; object-fit: contain; display: block; margin: auto;;">
         <p style="color: #000000;">Image 4 Conference Poster</p>
     </div>
     <div style="width: 500px; text-align: center; margin: 10px;">
-        <img src="/images/scholarship.png" alt="Image 5" style="width: 300px; height: 200px; object-fit: cover;">
+        <img src="/images/scholarship.png" alt="Image 5" style="width: 300px; height: 200px; object-fit: contain; display: block; margin: auto;;">
         <p>Image 5 Four years scholarship during undergraduate</p>
     </div>
     <div style="width: 500px; text-align: center; margin: 10px;">
-        <img src="/images/M.png" alt="Image 6" style="width: 300px; height: 200px; object-fit: cover;">
+        <img src="/images/M.png" alt="Image 6" style="width: 300px; height: 200px; object-fit: contain; display: block; margin: auto;;">
         <p style="color: #000000;">Image 6 Meritorious Winner of America Mathematical Contest In Modeling</p>
     </div>
     <div style="width: 500px; text-align: center; margin: 10px;">
-        <img src="/images/second.png" alt="Image 7" style="width: 300px; height: 200px; object-fit: cover;">
+        <img src="/images/second.png" alt="Image 7" style="width: 300px; height: 200px; object-fit: contain; display: block; margin: auto;;">
         <p style="color: #000000;">Image 7 Second prize of China National Structural Design Information Technology Competition for College Students in 2021</p>
     </div>
     <div style="width: 500px; text-align: center; margin: 10px;">
-        <img src="/images/other awards.png" alt="Image 8" style="width: 300px; height: 200px; object-fit: cover;">
+        <img src="/images/other awards.png" alt="Image 8" style="width: 300px; height: 200px; object-fit: contain; display: block; margin: auto;;">
         <p style="color: #000000;">Image 8 Other awards</p>
     </div>
-</div>
 
 
 
