--- a/gallery.html
+++ b/gallery.html
@@ -93,7 +93,7 @@
     </div>
     <div style="width: 500px; text-align: center; margin: 10px;">
         <img src="/images/scholarship.png" alt="Image 5" style="width: 300px; height: 200px; object-fit: contain; display: block; margin: auto;;">
-        <p>Image 5 Four years scholarship during undergraduate</p>
+        <p style="color: #000000>Image 5 Four years scholarship during undergraduate</p>
     </div>
     <div style="width: 500px; text-align: center; margin: 10px;">
         <img src="/images/M.png" alt="Image 6" style="width: 300px; height: 200px; object-fit: contain; display: block; margin: auto;;">
