--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 
             <!-- Image container for the picture on the right -->
             <div class="col-lg-4">
-                <div class="image-container" style="position: relative; width: 150px; height: 200px;">
-                    <img src="/images/me.jpg" alt="Original Image" class="hover-effect original-image" style="width: 100%; height: 100%; object-fit: cover;">
-                    <img src="/images/me2.png" alt="Hover Image" class="hover-effect hover-image" style="width: 100%; height: 100%; object-fit: cover; position: absolute; top: 0; left: 0; opacity: 0; transition: opacity 0.5s ease;">
+                <div class="image-container" style="position: relative; width: 175px; height: 225px;">
+                    <img src="/images/me2.jpg" alt="Original Image" class="hover-effect original-image" style="width: 100%; height: 100%; object-fit: cover;">
+                    <img src="/images/me.png" alt="Hover Image" class="hover-effect hover-image" style="width: 100%; height: 100%; object-fit: cover; position: absolute; top: 0; left: 0; opacity: 0; transition: opacity 0.5s ease;">
                 </div>
             </div>
             
