--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <p>I am a Master student currently at Haifa University. My research interests focus on Mechanism of Rock, and Numerical Simulation Method. </p>
                 
                 <!-- EDIT: download link -->
-                <p><a href="/file/CV.pdf" target="_blank"><i class="icon-file"></i> DOWNLOAD MY CV</a></p>
+                <p><a href="/file/CV.pdf" target="_blank"><img src="/images/icon_pdf.gif" alt="Download CV" style="width: 20px; height: 20px;"> DOWNLOAD MY CV</a></p>
             </div>
 
             <!-- Image container for the picture on the right -->
