--- a/publication.html
+++ b/publication.html
@@ -88,7 +88,7 @@
 				</div>
 				<div class="col-lg-3">
 					<!-- EDIT: download link -->
-					<p><a href="/file/CV.pdf" target="_blank"><i class="icon-file"></i> <sm>DOWNLOAD MY CV</sm></a></p>
+					<p><a href="/file/CV.pdf" target="_blank"><img src="/images/icon_pdf.gif" alt="Download CV" style="width: 20px; height: 20px;"> <sm>DOWNLOAD MY CV</sm></a></p>
 				</div>
 				
 			</div><!--/.row -->
